--- a/Midterm.Rmd
+++ b/Midterm.Rmd
@@ -24,7 +24,8 @@ Predict total sales for every product and store in the next month for the data p
 
 # Data
 
-Data was obtained from "https://www.kaggle.com/c/competitive-data-science-predict-future-sales/data"
+Data was obtained from "https://www.kaggle.com/c/competitive-data-science-predict-future-sales/data". The data is in Russian language and a translated version of the data was obtained from discussion forum in Kaggle. Attribute such as the store location was also obtained from the discussion forum.
+
 
 # Exploratory Data Analysis
 
@@ -39,17 +40,23 @@ Items <- read.csv('./Midterm/items.csv')
 # Items look up translated
 
 ItemsReference <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "items-translated")
+ShopReference <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "ShopLocations")
+ShopReference %<>% dplyr::mutate(city = as.factor(city))
+ItemCatNomenclature <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "item_categories-translated.csv")
 ItemsReference %<>% dplyr::mutate(Cinema = ifelse(stringr::str_detect(Category,"Cinema"),1,0),
                                   Music = ifelse(stringr::str_detect(Category,"Music"),1,0),
                                   Games = ifelse(stringr::str_detect(Category,"Games"),1,0),
                                   Books = ifelse(stringr::str_detect(Category,"Books"),1,0),
                                   Accesories = ifelse(stringr::str_detect(Category,"Accesories"),1,0),
                                   Gifts = ifelse(stringr::str_detect(Category,"Gifts"),1,0),
-                                  Programs = ifelse(stringr::str_detect(Category,"Programs"),1,0)
+                                  Programs = ifelse(stringr::str_detect(Category,"Programs"),1,0) # needing to find how two keyword in a category need to be adjusted?
                                   ) %>% 
-  dplyr::mutate(Others = ifelse(rowSums(.[5:11]) < 1,1,0))
+  dplyr::mutate(Others = ifelse(rowSums(.[5:11]) < 1,1,0)) %>% 
+  dplyr::mutate_at(.vars = 5:12, funs(factor))
 
-# Aggregated data 
+#--------------------------------------------------------------------------------------------------
+#                               Aggregated data
+#-------------------------------------------------------------------------------------------------- 
 Agg_sales_train <- sales_train %>% 
                  dplyr::mutate(date = lubridate::parse_date_time(date,orders = "%d.%m.%Y")) %>% 
                  dplyr::group_by(item_id,shop_id,date_block_num) %>% 
@@ -57,22 +64,43 @@ Agg_sales_train <- sales_train %>%
                  dplyr::arrange(item_id,shop_id,date_block_num) %>% 
                  dplyr::mutate(Item.Shop = item_id + shop_id / 100) %>% 
                  dplyr::left_join(x = ., y = Items[,2:3]) %>% 
-                 dplyr::left_join(x =., y = ItemsReference[,c(1,5:12)])
+                 dplyr::left_join(x =., y = ItemsReference[,c(1,5:12)]) %>% 
+                 dplyr::left_join(x =., y = ShopReference[,2:5])
+
+#-------------------------------------------------------------------
 # Reference frame
-df <- data.frame(date_block_num = rep(seq(min(Agg_sales_train$date_block_num),max(Agg_sales_train$date_block_num)),n_distinct(Agg_sales_train$Item.Shop)),
-                 Item.Shop = rep(unique(Agg_sales_train$Item.Shop),each = max(Agg_sales_train$date_block_num) - min(Agg_sales_train$date_block_num) + 1)
-                 ) %>%
-  tidyr::separate(.,2, c("item_id","shop_id"))%>%
-        dplyr::mutate(shop_id = ifelse(is.na(shop_id),0,shop_id)) %>% 
-        dplyr::mutate(item_id = as.numeric(item_id),shop_id = as.numeric(shop_id))
+#-------------------------------------------------------------------
+df <-
+  data.frame(
+  date_block_num = rep(seq(
+  min(Agg_sales_train$date_block_num),
+  max(Agg_sales_train$date_block_num)
+  ), n_distinct(Agg_sales_train$Item.Shop)),
+  Item.Shop = rep(
+  unique(Agg_sales_train$Item.Shop),
+  each = max(Agg_sales_train$date_block_num) - min(Agg_sales_train$date_block_num) + 1
+  )
+  ) %>%
+  tidyr::separate(., 2, c("item_id", "shop_id")) %>%
+  dplyr::mutate(shop_id = ifelse(is.na(shop_id), 0, shop_id)) %>%
+  dplyr::mutate(item_id = as.numeric(item_id), shop_id = as.numeric(shop_id))
+
+
+#---------------------------------------------------------------------------------------
 # Monthly sales reference data frame includes shop id
+#---------------------------------------------------------------------------------------
 MonthlySales.ItemShop <- df %>% 
         dplyr::left_join(.,Agg_sales_train[1:5]) %>% 
-        dplyr::left_join(.,Items[2:3])
+        dplyr::left_join(.,ItemsReference[-2]) %>% 
+        dplyr::left_join(.,ShopReference[2:3]) %>% 
+        dplyr::mutate(city = as.factor(city))
 
+# ------------------------------------------------------------------------------------------
+# DO I NEED THIS NOW???
+#--------------------------------------------------------------------------------------------
 MonthlySales.Train <- MonthlySales.ItemShop %>% 
         dplyr::mutate(ItemShop = item_id + shop_id/100) %>% 
-        dplyr::select(date_block_num,ItemShop,MonthlyCts, Price) %>% 
+        dplyr::select(date_block_num,ItemShop,MonthlyCts, Price,city) %>% 
         #dplyr::mutate(MonthlyCts = ifelse(is.na(MonthlyCts),0,MonthlyCts)) %>% 
         dplyr::group_by(ItemShop,date_block_num) %>% 
         dplyr::summarise(Sales = sum(MonthlyCts,na.rm = T)) %>% 
@@ -82,16 +110,26 @@ MonthlySales.Train <- MonthlySales.ItemShop %>%
 # There are several variables that have very little data , what are they
 NearZeroVars <- caret::nearZeroVar(MonthlySales.Train, names = F)
 MonthlySalests <- as.ts(MonthlySales.Train[,c(1,NearZeroVars)*-1],frequency = 1, start = 0, end = 33)
+
+
 # Summay by Item Category
 MonthlySalebyCategory  <- MonthlySales.ItemShop %>% dplyr::group_by(date_block_num,item_category_id) %>% 
   dplyr::summarise(SaleCounts = sum(MonthlyCts,na.rm = T)) %>% 
   tidyr::spread(item_category_id, SaleCounts)
+
+colnames(MonthlySalebyCategory) <- c("date_block_num",stringi::stri_replace_all_fixed(ItemCatNomenclature$item_category_name_translated," ",""))
 # How are categories related?
 
 ## remove categories that have zero variance
 ZeroVars <- caret::nearZeroVar(MonthlySalebyCategory)
 cormat <- cor(MonthlySalebyCategory[c(1,ZeroVars)*-1])
 
+
+#-----------------------------------------------------------------------------------------------
+# Utility functions
+#-------------------------------------------------------------------------------------------------
+
+# 1. INput Category, get items and store ids
 RetrieveItemStores <- function(data = MonthlySales.ItemShop, category) {
   data %>% 
     filter(item_category_id %in% category) %>%
@@ -108,22 +146,64 @@ RetrieveItemStores <- function(data = MonthlySales.ItemShop, category) {
 }
 
 
+# 2, Category KJ
+
+SuperCategory <- function(string) {
+  supercatlist <- c("Cinema", "Music", "Game", "Books", "Accessories", "Gifts", "Program","Payments")
+  position = str_which(string = string,pattern = supercatlist)
+  if (length(position) == 1) {
+     supercatlist[position]
+  } else 
+    if(length(position) > 1){
+      if(str_detect(string,"Payment")){
+        "Payments"
+      } else "Gifts"
+    }
+  else "Others"
+    
+}
+
+
+# 3 ArrangeData
+
+ArrangeData <- function(data = MonthlySales.ItemShop, Category = NULL, ...){
+  opts <- list(...) # How can we use High level Category filters?
+  if(!is.null(Category)){
+    data %>% filter(Category %in% Category)
+  }
+}
 ```
 
 ## Data exploration by item category
 
-In this section we'll explore the correlation amongst item categories at a higher level
+In this section we'll explore the correlation amongst item categories. 
 
-```{r}
+```{r,fig.width=4}
 # Correlation plot 
-corrplot::corrplot(cormat,order = "hclust",tl.cex = 0.6)
+corrplot::corrplot(cormat,order = "hclust",tl.cex = 0.3)
 library(reshape2)
 HighCors <- subset(melt(cormat,varnames = c('CatA', 'CatB'), value.name = 'Correlations'), Correlations >= 0.8 & Correlations < 1)
 
 HighCors[which(HighCors$CatA == 40),] %>% distinct(CatB)
 testdf <- RetrieveItemStores(category = 2) %>% distinct(item_id)
+# Roll up category further
+MonthlySalebyCategoryGrp <-
+  MonthlySales.ItemShop %>% dplyr::group_by(date_block_num, item_category_id) %>%
+  dplyr::summarise(SaleCounts = sum(MonthlyCts, na.rm = T)) %>% 
+  dplyr::left_join(.,ItemCatNomenclature) %>% 
+  dplyr::ungroup() %>% 
+  dplyr::mutate(SuperCategory = unlist(purrr::map(item_category_name_translated, SuperCategory)))
 
+MonthlySalebyCategoryGrp %<>% 
+  dplyr::group_by(date_block_num,SuperCategory) %>% 
+  dplyr::summarise(Sales = sum(SaleCounts)) %>% 
+  tidyr::spread(SuperCategory,Sales)
 
+cormat2 <- cor(MonthlySalebyCategoryGrp[-1])
+corrplot::corrplot(cormat2,method = c("number"))
+
+HighCors2 <- subset(melt(cormat2,varnames = c('CatA', 'CatB'), value.name = 'Correlations'), Correlations >= 0.8 & Correlations < 1)
+HighCors2[]
 ```
 
 ## Gaming consoles, accessories and games.
@@ -131,15 +211,15 @@ testdf <- RetrieveItemStores(category = 2) %>% distinct(item_id)
 ```{r}
 MonthlySalebyCategory %>% 
   dplyr::ungroup() %>% 
-  dplyr::select(`2`,`19`) %>% ggplot(mapping = aes(x = `19`, y = `2`)) + geom_point() + stat_smooth(method = "lm") + xlab("Games PS3") + ylab("Accesories PS3") + theme_bw()
+  dplyr::select(`Games-PS3`,`Accessories-PS3`) %>% ggplot(mapping = aes(x = `Games-PS3`, y = `Accessories-PS3`)) + geom_point() + stat_smooth(method = "lm") + xlab("Games PS3") + ylab("Accesories PS3") + theme_bw()
 
 MonthlySalebyCategory %>% 
   dplyr::ungroup() %>% 
-  dplyr::select(`2`,`11`) %>% ggplot(mapping = aes(x = `11`, y = `2`)) + geom_point() + stat_smooth(method = "lm") + xlab("Games Consoles PS3") + ylab("Accesories PS3") + theme_bw()
+  dplyr::select(`GameConsoles-PS3`,`Accessories-PS3`) %>% ggplot(mapping = aes(x = `GameConsoles-PS3`, y = `Accessories-PS3`)) + geom_point() + stat_smooth(method = "lm") + xlab("Games Consoles PS3") + ylab("Accesories PS3") + theme_bw()
 
 MonthlySalebyCategory %>% 
   dplyr::ungroup() %>% 
-  dplyr::select(`5`,`11`) %>% ggplot(mapping = aes(x = `11`, y = `5`)) + geom_point() + stat_smooth(method = "lm") + xlab("Games Consoles PS3") + ylab("PS Vita") + theme_bw()
+  dplyr::select(`GameConsoles-PS3`,`GameConsoles-PSVita`) %>% ggplot(mapping = aes(x = `GameConsoles-PSVita`, y = `GameConsoles-PS3`)) + geom_point() + stat_smooth(method = "lm") + xlab("Games Consoles PS3") + ylab("PS Vita") + theme_bw()
 
 
 ```
@@ -152,6 +232,8 @@ The
 # Data set up
 
 Categoriesofinterest <- c(2,5,11,19,32,37:40,55:60,62)
+
+
 Agg_Sales_Category <- Agg_sales_train %>% dplyr::ungroup() %>% 
   dplyr::mutate(shop_id = as.factor(shop_id)) %>% 
   dplyr::filter(item_category_id %in% !!Categoriesofinterest) %>%
@@ -193,7 +275,7 @@ Agg_Sales_Category %>% ggplot(mapping = aes(x = `37`, y = `55`,col = shop_id)) +
 
 
 ```{r}
-fit <- lm(`55` ~  `37`  +  Price55 + Price37 + shop_id , data = Agg_Sales_Category)
+fit <- lm(`55` ~  `37`  +  Price55 + Price37 + shop_id , data = Agg_Sales_Category,subset = Agg_Sales_Category$shop_id %in% c(28,31,53,54))
 #summary(fit)
 broom::augment(fit) %>% lattice::xyplot(.fitted ~ X55, data = .,xlab = "Cinema Blue Ray Sales", ylab = "Fitted Blue Ray sales")
 ```
