--- a/Midterm.Rmd
+++ b/Midterm.Rmd
@@ -41,8 +41,9 @@ Items <- read.csv('./Midterm/items.csv')
 # Items look up translated
 
 ItemsReference <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "items-translated")
+test <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "test")
 ShopReference <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "ShopLocations")
-ShopReference %<>% dplyr::mutate(city = as.factor(city),shop_id = as.integer(shop_id))
+ShopReference %<>% dplyr::mutate(city = as.factor(city),shop_id = as.integer(shop_id)) %>% dplyr::select(-lat,-long)
 ItemCatNomenclature <- readxl::read_xlsx(path = "./Midterm/LookUps.xlsx", sheet = "item_categories-translated.csv")
 ItemsReference %<>% dplyr::mutate(item_id = as.integer(item_id),
                                   Cinema = ifelse(stringr::str_detect(Category,"Cinema"),1,0),
@@ -188,13 +189,50 @@ SuperCategory <- function(string) {
 
 # 3 ArrangeData
 
-ArrangeData <- function(data = MonthlySales.ItemShop, CategorySuperlative = NULL, item_category_id = NULL, CategoryDesc = NULL, ...){
+ArrangeData <- function(data = MonthlySales.ItemShop, CategorySuperlative = NULL, 
+                        item_category_id = NULL, CategoryDesc = NULL,store_ids = NULL, 
+                        item_ids = NULL,response = NULL, aggCriteria = NULL, ...){
   opts <- list(...) # How can we use High level Category filters?
+   browser()
+  # Get Item.Shops for aggregation
+  if(!is.null(aggCriteria)){
+     
+    stopifnot(!is.null(response))
+    criteria <- names(aggCriteria)
+    if(is.element("item_ids",criteria)){
+      aggItemIDs <- aggCriteria$item_ids
+    } else{
+       aggItemIDs <- NULL
+    }
+    
+    if(is.element("CategorySuper", criteria)) {
+      # using lexical scoping here
+      aggItemIDs <- c(aggItemIDs,
+                      ItemsReference %>% dplyr::select(item_id,!!aggCriteria$CatergorySuper) %>%
+        dplyr::filter_at(2,any_vars(as.integer(.)== 2)) %>% dplyr::select(item_id) %>% .$item_id)
+
+     
+      }
+    if(is.element("category_id", criteria)){
+      aggItemIDs <- c(aggItemIDs,
+                      ItemsReference %>% dplyr::select(item_id,item_category_id) %>% 
+                        dplyr::filter(item_category_id %in% !!aggCriteria$category_id) %>% 
+                        .$item_id)
+    }
+    if(is.element("shop_ids",criteria)){
+      aggShopIDs <- aggCriteria$shop_id
+    } else aggShopIDs <- NULL
+    
+    if(is.element("location",criteria)) {
+      locFlag = T
+    } else locFlag = F
+  }
   
   # filter by super category
   if(!is.null(CategorySuperlative)){
-   data %<>% dplyr::filter_at(vars(which(colnames(.) %in% CategorySuperlative)),all_vars(as.integer(.)== 2))
+   data %<>% dplyr::filter_at(vars(which(colnames(.) %in% CategorySuperlative)),any_vars(as.integer(.)== 2))
   }
+
   # filter by item_category_id
   if(!is.null(item_category_id)){
     data %<>% dplyr::filter(item_category_id %in% !!item_category_id)
@@ -202,20 +240,100 @@ ArrangeData <- function(data = MonthlySales.ItemShop, CategorySuperlative = NULL
   if(!is.null(CategoryDesc)){
     data %<>% dplyr::filter(Category %in% !!CategoryDesc)
   }
+  if(!is.null(item_ids)) {
+    data %<>% dplyr::filter(item_id %in% !!item_ids)
+  }
+  if(!is.null(store_ids)){
+    data %<>% dplyr::filter(store_id %in% !!store_ids)
+  }
+  
+  # Aggregation
+  
+if(!is.null(aggCriteria)){
+  ResponseCriteria = names(response)
+  if(all(is.element(c("shop_id","item_id"),ResponseCriteria))){
+    Response <- data  %>% 
+      dplyr::filter(item_id == !!response$item_id, shop_id == !!response$shop_id) %>% 
+      dplyr::select(date_block_num,item_id,shop_id,MonthlyCts,Price) %>% 
+      dplyr::arrange(date_block_num,item_id,shop_id) %>% 
+      dplyr::mutate(Item.Shop = as.character(item_id + shop_id/100))
+  } else{
+    if(all(is.element(c("shop_id","item_category_id"),ResponseCriteria))){
+      Response <- data  %>% 
+        dplyr::filter(item_category_id == !!response$item_category_id, shop_id == !!response$shop_id) %>% 
+        dplyr::select(date_block_num,shop_id,item_category_id,MonthlyCts,Price) %>% 
+        dplyr::arrange(date_block_num,item_category_id,shop_id) %>% 
+        dplyr::group_by(date_block_num,item_category_id,shop_id) %>% 
+        dplyr::summarise(MonthlyCts = sum(MonthlyCts, na.rm = T), Price = mean(Price,na.rm = T)) %>% 
+        dplyr::mutate(itmCatid.ShopID = as.character(item_category_id + shop_id/100))
+    }
+    else{
+      if(all(is.element(c("shop_id","CategorySuper"),ResponseCriteria))){
+        
+        aggResItemIDs <-  ItemsReference %>% dplyr::select(item_id,!!ResponseCriteria$CatergorySuper) %>%
+          dplyr::filter_at(2,any_vars(as.integer(.)== 2)) %>% dplyr::select(item_id) %>% .$item_id
+        
+        Response <- data  %>% 
+          dplyr::filter(item_id == !!aggResItemIDs, shop_id == !!response$shop_id) %>% 
+          dplyr::select(date_block_num,item_id,shop_id,MonthlyCts,Price) %>% 
+          dplyr::arrange(date_block_num,item_id,shop_id) %>% 
+          dplyr::group_by(date_block_num,item_id,shop_id) %>% 
+          dplyr::summarise(MonthlyCts = sum(MonthlyCts, na.rm = T), Price = mean(Price,na.rm = T)) %>% 
+          dplyr::mutate(Item.ShopID = as.character(item_id + shop_id/100))
+      }
+    }
+  }
+  
+  responseitemids <- Response %>% dplyr::ungroup() %>% distinct(item_id) %>% .$item_id
+  responseshopids <- Response %>% dplyr::ungroup() %>% distinct(shop_id) %>% .$shop_id
+  
+  Predictors.ItemIDs <- setdiff(aggItemIDs,responseitemids)
+  Predictors.ShopIDs <- setdiff(aggShopIDs,responseshopids)
+  
+  Predictors <- data %>% 
+    dplyr::filter(shop_id %in% !!Predictors.ShopIDs,
+                  item_id %in% !!Predictors.ItemIDs) %>% 
+    dplyr::arrange(date_block_num,item_id,shop_id)
+  
+  if(locFlag){
+    if(nrow(Predictors) > 0){
+      Predictors %<>% dplyr::group_by(date_block_num,item_id,city) %>% 
+      dplyr::summarise(MonthlyCts = sum(MonthlyCts,na.rm = T),Price = mean(Price,na.rm = T)) %>% 
+      dplyr::mutate(Item.City = paste0(as.character("item_id"),"_",city))
+    } else {
+      Predictors <- data %>% dplyr::group_by(date_block_num,item_id,city) %>% 
+      dplyr::summarise(MonthlyCts = sum(MonthlyCts,na.rm = T),Price = mean(Price,na.rm = T)) %>% 
+      dplyr::mutate(Item.City = paste0(as.character("item_id"),"_",city))
+    }
+    
+    
+  } else{
+    Predictors %<>% dplyr::group_by(date_block_num,item_id,shop_id) %>% 
+      dplyr::summarise(MonthlyCts = sum(MonthlyCts,na.rm = T),Price = mean(Price,na.rm = T)) %>% 
+      dplyr::mutate(Item.Shop = as.character(item_id + shop_id/100))
+  }
+  
+  browser()
+    
+} else {
   # selection
   data %<>% dplyr::mutate(Item.Shop = as.character(item_id + shop_id/100)) %>% 
     dplyr::select(date_block_num,Item.Shop,MonthlyCts,Price)
   
   # spread 
   
-  data %<>% 
-    
-    tidyr::gather(variable,value, -c(date_block_num,Item.Shop)) %>% 
-    tidyr::unite(temp,Item.Shop,variable) %>% 
+  data %<>%
+
+    tidyr::gather(variable,value, -c(date_block_num,Item.Shop)) %>%
+    tidyr::unite(temp,Item.Shop,variable) %>%
     tidyr::spread(temp,value)
+}
   
-  ts(data,start = 2013, frequency = 12)
   
+  # 
+  # 
+  # ts(data,start = 2013, frequency = 12)
+  # 
 }
 
 
@@ -323,8 +441,9 @@ Agg_Sales_Category %>% ggplot(mapping = aes(x = `37`, y = `55`,col = shop_id)) +
 
 ```{r}
 fit <- lm(`55` ~  `37`  +  Price55 + Price37 + shop_id , data = Agg_Sales_Category,subset = Agg_Sales_Category$shop_id %in% c(28,31,53,54))
-#summary(fit)
+summary(fit)
 broom::augment(fit) %>% lattice::xyplot(.fitted ~ X55, data = .,xlab = "Cinema Blue Ray Sales", ylab = "Fitted Blue Ray sales")
+
 ```
 
 # Do the relationships generalize to each item_id?
